welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:30: error: not found: value faireV
  faireV()
  ^MethodsPicture:5: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.MethodsPicture'
override def run() {
             ^